Fix line wrap
Fixes https://github.com/hbz/skohub-extension/issues/6

--- a/src/styles/formStyle.pcss
+++ b/src/styles/formStyle.pcss
@@ -325,7 +325,7 @@
       }
 
       & span {
-        display: flex;
+        display: block;
         padding: 10px;
         border-bottom: 1px solid var(--primary);
         cursor: pointer;
